# librarian

./: .gitignore  LICENSE  README.md  librarian.py  librarian_server.py  librarian_stdio.py  librarian_wsgi.py  pyproject.toml
prompts/: system_instructions.md
resources/: __init__.py  prompt_resources.py  wikipedia_resources.py
tools/: __init__.py  wikipedia_tools.py
utils/: rate_limiter.py
wiki/: api.py
